--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -45,25 +45,6 @@ a:active { color: #FFFFFF !important; text-decoration: none  !important; }
     width: 100%;
 }
 
-/*body.content-mtm #wrapper2 {
-    position: absolute;
-    z-index: 3;
-    top: 0px;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}*/
-
-/*#wrapper2,
-#wrapper3 {
-    position: absolute;
-    z-index: 3;
-    top: 0px;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-}*/
-
 header, footer {
     position: absolute;
     z-index: 10;
@@ -141,8 +122,6 @@ body.content-mtm #wrapper2 .scroller .container .row div {
     background-color: #ffffff;
 }
 
-
-
 img {
     border-radius : 0 !important;
 }
@@ -165,7 +144,7 @@ footer .section {
     display: none;
 }
 
-footer .section.active {
+footer .section .active {
     display:block;
 }
 
@@ -175,7 +154,6 @@ body.content-match #wrapper .scroller .container .row,
 body.content-standings #wrapper .scroller .container .row   {
     padding: 0 20px !important;
 }
-
 
 body.content-news #wrapper .scroller .container .row .news,
 body.content-match #wrapper .scroller .container .row .competition,
@@ -191,10 +169,7 @@ body.content-news #wrapper .scroller .container .row .news:last-child {border: 0
 body.content-standings #wrapper .scroller .container .row .competition .title,
 body.content-news #wrapper .scroller .container .row .news .title {color:#00102B;}
 
-
-
 body.content-news #wrapper .scroller .container .row .news .moment {color:#3B9444;}
-
 
 body.content-news #wrapper2 .scroller .container .row .news:last-child {border: 0 !important;}
 body.content-news #wrapper2 .scroller .container .row .news .title {color:#00102B;}
@@ -202,7 +177,6 @@ body.content-news #wrapper2 .scroller .container .row .news .title {color:#00102
 body.content-news #wrapper2 .scroller .container .row .news .moment {
     color:#3B9444;
 }
-
 
 body.content-news #wrapper2 .scroller .container .row .news .body {
     margin-top:20px !important;
@@ -221,8 +195,6 @@ body.content-scorers .competition.active{
     display:block;
 }
 
-
-
 table thead tr th {
     text-align: center;
     color: #ffffff;
@@ -235,8 +207,6 @@ table tbody tr td {
     font-size: 0.8em;
     margin: 0 !important;
 }
-
-
 
 div.header {
     position: absolute;
@@ -257,9 +227,7 @@ div.header {
 div.header .caption {
     text-align: center;
     font-weight: bold;
-    /*text-transform: capitalize;*/
 }
-
 
 div.header .left {
     text-align: right;
@@ -288,7 +256,6 @@ div.header .right {
     right: 0;
     z-index: 8;
 }
-
 
 .loading {
     position: absolute;
@@ -594,15 +561,6 @@ body.content-mtm .row-back {
 
 /*menu*/
 
-/* Reemplazado funcion que maneja ng-class en main */
-/*i.back-button {*/
-    /*visibility: hidden;*/
-/*}*/
-
-/*i.back-button.active {*/
-    /*visibility: visible;*/
-/*}*/
-
 .tabs {
     opacity: 0.5;
     /*text-transform: capitalize;*/
@@ -635,6 +593,8 @@ body.content-mtm .row-back {
     right: 16px;
 }
 
+/*Drawer*/
+
 .drawer-icon {
     vertical-align: middle;
     font-size: 2.5em;
@@ -642,8 +602,16 @@ body.content-mtm .row-back {
 
 .drawer-title{
     vertical-align: middle;
-    font-size: 1.2em;
+    font-size: 18px;
     color: #FFF;
+    font-weight: bold;
+}
+
+.drawer-app-logo {
+    width: auto;
+    height: 30px;
+    position: relative;
+    vertical-align: middle;
 }
 
 .icon-white {
@@ -661,6 +629,8 @@ body.content-mtm .row-back {
 .navbar{
     margin-bottom: 0;
 }
+
+/*Sections*/
 
 .section-header {
     line-height: 35px;
@@ -684,6 +654,8 @@ body.content-mtm .row-back {
     color: #ffffff !important;
 }
 
+/*Search Lists (Team/Language Selection)*/
+
 .search-bar {
     margin-bottom: 0 !important;
 }
@@ -696,6 +668,15 @@ body.content-mtm .row-back {
     padding-top: 8px !important;
     padding-bottom: 8px !important;
 }
+
+/*Settings*/
+
+.settings-wrapper {
+    top: 65px !important;
+    background-color: transparent !important;
+}
+
+/*Settings Language*/
 
 .lang-tag {
     font-weight: bold;
@@ -716,10 +697,7 @@ body.content-mtm .row-back {
     margin-top: 16px;
 }
 
-.settings-wrapper {
-    top: 65px !important;
-    background-color: transparent !important;
-}
+/*News */
 
 .row-news-header {
     position: absolute;
@@ -769,4 +747,40 @@ body.content-mtm .row-back {
     margin-top:20px !important;
     padding-top:20px !important;
     border-top: solid 1pt #2B2B2B !important;
+}
+
+/*No Content "Component"*/
+
+.no-content-panel {
+    color: #777;
+    text-align: center;
+    width: 100%;
+    height: auto;
+    position: absolute;
+    margin: 0 auto;
+    left: 0;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 8;
+}
+
+.no-content-panel i{
+    font-size: 6em;
+
+}
+
+.no-content-panel .no-content-panel-title{
+    position: relative;
+    font-size: 24px;
+    text-align: center;
+}
+
+/*
+  Allow angular.js to be loaded in body, hiding cloaked elements until
+  templates compile.  The !important is important given that there may be
+  other selectors that are more specific or come later and might alter display.
+ */
+[ng\:cloak], [ng-cloak], .ng-cloak {
+    display: none !important;
 }
