--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
@@ -4,7 +4,7 @@
                 <form class="form-horizontal" style="position: absolute; z-index: 2;">
                     <div class="form-group well search-bar">
                         <div class="input-group">
-                            <input type="text" class="form-control" placeholder="Find your Team" ng-model="searchQuery">
+                            <input type="text" class="form-control" placeholder="{{'SETTINGS.TEAM_SEARCH_HELPER' | translate}}" ng-model="searchQuery">
                             <span class="input-group-addon"><i class="icon mdi-action-search" style="font-size:1.8em;"></i></span>
                         </div>
                     </div>
