--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/loading.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/loading.html
@@ -1,3 +1,3 @@
 <div class="loading">
-  <span class="label label-default">loading...</span>
+  <span class="label label-default">{{'LOADING' | translate}} ...</span>
 </div>
