FUTBOL BRASIL:  - Agregado archivo de paleta de colores - Cambios en News y Standings

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/news.html
@@ -1,7 +1,7 @@
 <div class="row row-news-header">
     <div class="col-xs-12 text-center text-center-vertical">
         <div class="news-header">
-            <h4 class="title" translate>NEWS.TITLE</h4>
+            <h4 class="title" translate>SECTIONS.NOTISTATS.NEWS</h4>
         </div>
     </div>
 </div>
