--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -24,22 +24,23 @@
             <div class="row" style="margin-top:35px !important;">
 
               <div class="col-xs-6" >
-                <span class="btn btn-success btn-filter-{{$index}} disabled" ng-class="{'disabled': isActive('competition')}" ng-click="getCompetition($index)">Competition</span>
+                <span class="btn btn-success btn-filter-{{$index}} disabled" ng-class="{'disabled': isActive('competition')}" ng-click="getCompetition()">Competition</span>
               </div>
 
               <div class="col-xs-6" >
-                <span class="btn btn-success btn-filter-{{$index}}" ng-class="{'disabled': isActive('phase')}" ng-click="getPhase($index)">Phase</span>
+                <span class="btn btn-success btn-filter-{{$index}}" ng-class="{'disabled': isActive('phase')}" ng-click="getPhase()">Phase</span>
               </div>
 
             </div>
 
 
-            <div class="row"  >
+            <div class="row">
               <div id="{{wrapper.getName($index)}}" class="wrapper" style="margin-top:100px !important;">
                 <div class="scroller" >
                   <div class="container">
                     <div class="col-xs-12" >
                       <table class="table">
+
                         <thead>
                           <tr>
                             <th ng-bind="strings.PLAYER_NAME_LABEL"></th>
@@ -48,19 +49,23 @@
                           </tr>
                         </thead>
 
-                        <tbody>
+                        <tbody >
 
-                          <tr ng-repeat="leader in competition.leaderboard" ng-class="{'active' : $odd}" >
-                            <td>
-                              <span class="text-center-vertical" ng-bind="$index+1" ></span>
-                            </td>
-                            <td>
-                              <span class="text-center-vertical" ng-bind="leader.client"></span>
-                            </td>
-                            <td>
-                              <span class="text-center-vertical" ng-bind="leader.score"></span>
-                            </td>
-                          </tr>
+
+                            <tr ng-repeat="leader in competition.leaderboard" ng-class="{'active' : $odd,  'client' : competition.client.client == leader.client }">
+                              <td>
+                                <span class="text-center-vertical" ng-bind="leader.index" ></span>
+                              </td>
+                              <td>
+                                <span class="text-center-vertical" ng-bind="leader.client"></span>
+                              </td>
+                              <td>
+                                <span class="text-center-vertical" ng-bind="leader.score"></span>
+                              </td>
+                            </tr>
+
+
+
 
                         </tbody>
 
