FUTBOL BRASIL: Actualización css para leaderboard

--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -803,3 +803,8 @@ body.content-mtm .row-back {
 [ng\:cloak], [ng-cloak], .ng-cloak {
     display: none !important;
 }
+.client {
+  color:#ff5722 !important;
+  font-weight: bold;
+  font-size: 1.2em;
+}
