FUTBOL BRASIL:  - Corrigiendo detalles en Friends, Settings y manejo de Localización

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu-item.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu-item.html
@@ -1,5 +1,5 @@
-<div ng-click="navigate('{{section}}')" class="row content-menu">
-    <div class="col-xs-8">
+<div ng-click="navigate()" class="row content-menu">
+    <div class="col-xs-12">
         <span ng-class=" 'icon {{icon}}' "></span>
         <span ng-transclude></span>
     </div>
