--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/templates/menu.html
@@ -1,5 +1,5 @@
 <div id="wrapperM" class="page left">
-    <div class="scroller">
+    <div class="scroller" style="width: 100%;">
         <div class="container" ng-transclude></div>
     </div>
 </div>
