--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/mtm.html
@@ -47,7 +47,7 @@
             </div>
             <div class="row" ng-hide="hasGamesForToday">
                 <div class="col-xs-12">
-                    <div class="no-content-panel">
+                    <div class="no-content-panel" style="margin-top: 120px !important;">
                         <i class="mdi-action-info-outline"></i>
                         <div class="no-content-panel-title" translate>EMPTY_STATES.LIVE</div>
                     </div>
