--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/login.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row" style="margin-top: 50px;">
     <div class="col-xs-10 col-xs-offset-1 text-center well">
         <!--style="position: absolute; top: 10%;"-->
 
@@ -9,7 +9,7 @@
             </div>
 
             <div class="form-control-wrapper">
-                <input type="tel" class="form-control empty"ng-model="msisdn"
+                <input type="tel" class="form-control empty" ng-model="msisdn"
                        id="msisdnInput" placeholder="{{strings.MSISDN_HOLDER}}">
                 <span class="material-input"></span>
             </div>
