FUTBOL BRASIL:  - Trabajando en Fix de Scorers

--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -19,8 +19,8 @@
                         </div>
 
                         <div class="row">
-                            <div id="{{wrapper.getName($index)}}" class="wrapper" >
-                                <div class="scroller" >
+                            <div id="{{wrapper.getName($index)}}" class="wrapper wrapper-full" style="top:35px;">
+                                <div class="scroller">
                                     <div class="container">
                                         <div class="col-xs-12" >
                                             <table class="table">
