--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/points.html
@@ -5,7 +5,7 @@
         </div>
     </div>
 </div>
-<div class="row">
+<div class="row" ng-show="hasScore">
     <div id="tournamentScroll" class="wrapper wrapper-row" ng-style="getHeight()">
         <div class="scroller" ng-style="getWidth()">
             <div class="row">
@@ -86,6 +86,14 @@
                     </table>
                 </div>
             </div>
+        </div>
+    </div>
+</div>
+<div class="row" ng-hide="hasScore">
+    <div class="col-xs-12 news">
+        <div class="no-content-panel" style="margin-top: 120px !important;">
+            <i class="mdi-action-info-outline"></i>
+            <div class="no-content-panel-title" translate>EMPTY_STATES.POINTS</div>
         </div>
     </div>
 </div>
