--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -1,34 +1,34 @@
-<div class="row">
+<!--<div class="row">-->
     <div id="wrapperH">
         <div id="scroller" ng-style="getTotalWidth()">
             <ul>
                 <li ng-style="getWidth()" ng-repeat="league in item.leagues" on-last-repeat>
                     <div class="container">
-                        <div class="row header">
-                          <div class="col-xs-3 tabs text-left" ng-click="prevPage()">
-                            <span ng-bind="item.leagues[$index-1].name"></span>
+                        <div class="row row-header row-header-competition">
+                          <div class="col-xs-4 tabs text-left" ng-click="prevPage()">
+                            <h6 ng-bind="item.leagues[$index-1].name"></h6>
                           </div>
 
-                          <div class="col-xs-6">
-                            <h4 ng-bind="league.name" class="caption"></h4>
+                          <div class="col-xs-4">
+                            <h5 ng-bind="league.name" class="caption"></h5>
                           </div>
 
-                          <div class="col-xs-3 tabs text-right" ng-click="nextPage()">
-                            <span ng-bind="item.leagues[$index+1].name"></span>
+                          <div class="col-xs-4 tabs text-right" ng-click="nextPage()">
+                            <h6 ng-bind="item.leagues[$index+1].name"></h6>
                           </div>
                         </div>
 
                         <div class="row">
-                            <div id="{{wrapper.getName($index)}}" class="wrapper wrapper-full" style="top:35px;">
+                            <div id="{{wrapper.getName($index)}}" class="wrapper wrapper-full">
                                 <div class="scroller">
                                     <div class="container">
                                         <div class="col-xs-12" >
                                             <table class="table">
                                                 <thead>
                                                 <tr>
-                                                    <th ng-bind="strings.PLAYER_NAME_LABEL"></th>
-                                                    <th ng-bind="strings.TEAM_LABEL"></th>
-                                                    <th ng-bind="strings.GOALS_LABEL"></th>
+                                                    <th translate>SCORERS.PLAYER_NAME_LABEL</th>
+                                                    <th translate>SCORERS.TEAM_LABEL</th>
+                                                    <th translate>SCORERS.GOALS_LABEL</th>
                                                 </tr>
                                                 </thead>
                                                 <tbody>
@@ -37,7 +37,7 @@
                                                     ng-class="{'active' : $odd}" >
                                                     <td class="text-left">
                                                         <span class="text-center-vertical"
-                                                              ng-bind="getScorerName(scorer)" ></span>
+                                                              ng-bind="scorer.fullName" ></span>
                                                     </td>
                                                     <td class="text-left">
                                                         <span class="text-center-vertical"
@@ -60,4 +60,4 @@
             </ul>
         </div>
     </div>
-</div>
+<!--</div>-->
