--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/leaderboard.html
@@ -4,15 +4,15 @@
             <ul>
                 <li ng-style="getWidth()" ng-repeat="competition in item.competitions" >
                     <div class="container">
-                        <div class="row header" style="height: 50px;">
-                            <div class="col-xs-3 tabs text-left" ng-click="prevPage()">
-                                <span ng-bind="item.competitions[$index-1].name"></span>
+                        <div class="row row-header row-header-competition">
+                            <div class="col-xs-4 tabs text-left" ng-click="prevPage()">
+                                <h6 ng-bind="item.competitions[$index-1].name"></h6>
                             </div>
-                            <div class="col-xs-6">
-                                <h4 ng-bind="competition.name" class="caption"></h4>
+                            <div class="col-xs-4">
+                                <h5 ng-bind="competition.name" class="caption"></h5>
                             </div>
-                            <div class="col-xs-3 tabs text-right" ng-click="nextPage()">
-                                <span ng-bind="item.competitions[$index+1].name"></span>
+                            <div class="col-xs-4 tabs text-right" ng-click="nextPage()">
+                                <h6 ng-bind="item.competitions[$index+1].name"></h6>
                             </div>
                         </div>
 
