--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/standings.html
@@ -176,16 +176,16 @@
 
         <div class="row-back border" ng-click="prevPage()">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <div class="col-xs-12">
                     <span ng-bind="item.phase.competition.name"
                           style="font-size: 2em; margin-left: 10px; font-weight: bold;"></span>
                 </div>
             </div>
         </div>
 
-        <div class="row-back" style="top:50px !important; background-color: #FAFAFA;">
+        <div class="row-back" style="top:40px !important; background-color: #FAFAFA;">
             <div class="row">
-                <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12" style="text-align: center;">
+                <div class="col-xs-12" style="text-align: center;">
                     <span ng-bind="item.phase.global_name"
                           style="font-size: 1.6em; font-weight: bold;"></span>
                 </div>
