--- a/FutbolBrasil/futbol-brasil/app/styles/default.css
+++ b/FutbolBrasil/futbol-brasil/app/styles/default.css
@@ -468,7 +468,7 @@ body.content-mtm .row-back {
     left:0;
     right:0;
     width: 100%;
-    height: 150px;
+    height: 100px;
     line-height: 40px;
     background-color: #FFFFFF;
     color: #000000;
@@ -800,11 +800,12 @@ body.content-mtm .row-back {
 /*Leaderboars*/
 
 .row-header {
-    position: relative;
+    position: absolute;
+    /*position: relative;*/
     z-index: 4;
-    /*top: 0;*/
-    /*left: 0;*/
-    /*right: 0;*/
+    top: 0;
+    left: 0;
+    right: 0;
     width: 100%;
     height: 50px;
     line-height: 35px;
@@ -819,6 +820,14 @@ body.content-mtm .row-back {
 .row-header-primary {
     background-color: #2196F3;
     /*background-color: #808080;*/
+}
+
+.row-header-competition {
+    background-color: #3B9444;
+}
+
+.row-header-live {
+    background-color: #D84A38;
 }
 
 .row-header .title {
