--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/team-selection.html
@@ -22,8 +22,8 @@
                                     <i ng-class="getTeamClass(team)"></i>
                                 </div>
                                 <div class="row-content">
-                                    <h6 class="list-group-item-heading">{{getTeamName(team)}}</h6>
-                                    <p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus.</p>
+                                    <h6 class="list-group-item-heading" ng-bind="team.name"></h6>
+                                    <!--<p class="list-group-item-text">Donec id elit non mi porta gravida at eget metus.</p>-->
                                 </div>
                             </div>
                             <div class="list-group-separator"></div>
