--- a/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
+++ b/FutbolBrasil/futbol-brasil/app/modules/core/views/scorers.html
@@ -2,11 +2,12 @@
     <div id="wrapperH">
         <div id="scroller" ng-style="getTotalWidth()">
             <ul>
-                <li ng-style="getWidth()" ng-repeat="league in item.leagues" on-last-repeat>
+                <li ng-style="getWidth()" ng-repeat="league in leagues" on-last-repeat>
                     <div class="container">
                         <div class="row row-header row-header-competition">
+
                           <div class="col-xs-4 tabs text-left" ng-click="prevPage()">
-                            <h6 ng-bind="item.leagues[$index-1].name"></h6>
+                            <h6 ng-bind="leagues[$index-1].name"></h6>
                           </div>
 
                           <div class="col-xs-4">
@@ -14,7 +15,7 @@
                           </div>
 
                           <div class="col-xs-4 tabs text-right" ng-click="nextPage()">
-                            <h6 ng-bind="item.leagues[$index+1].name"></h6>
+                            <h6 ng-bind="leagues[$index+1].name"></h6>
                           </div>
                         </div>
 
@@ -23,7 +24,7 @@
                                 <div class="scroller">
                                     <div class="container">
                                         <div class="col-xs-12" >
-                                            <table class="table">
+                                            <table  ng-show="league.scorers" class="table">
                                                 <thead>
                                                 <tr>
                                                     <th translate>SCORERS.PLAYER_NAME_LABEL</th>
